--- a/.github/workflows/shylocks.yml
+++ b/.github/workflows/shylocks.yml
@@ -7,7 +7,7 @@ on:
   push:
   workflow_dispatch:
   schedule:
-    - cron: '30 * * * *'
+    - cron: '30 0/4 * * *'
   # watch:
   #   types: started
   repository_dispatch:
